--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2"
   },
@@ -18,5 +17,6 @@
     "@types/config": "^3.3.5",
     "jest": "^29.7.0",
     "typescript": "^5.9.2"
-  }
+  },
+  "description": ""
 }
