--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
+    "dev":"nodemon Class/server.js",
     "nodemon": "nodemon server --watch",
     "test": "jest"
   },
@@ -11,11 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "@apollo/server": "^5.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
+    "graphql": "^16.12.0",
+    "jsonwebtoken": "^9.0.3",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@types/config": "^3.3.5",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "typescript": "^5.9.2"
   },
   "description": ""
